--- a/login.html
+++ b/login.html
@@ -1,167 +1,123 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Login • Telegram Lookup</title>
+#!/usr/bin/env python3
 
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: #0d1117;
-            font-family: Arial, sans-serif;
-            color: #fff;
-        }
-        .container {
-            max-width: 380px;
-            margin: 40px auto;
-            background: #161b22;
-            padding: 25px;
-            border-radius: 12px;
-            box-shadow: 0 0 10px rgba(255,255,255,0.1);
-        }
-        h2 {
-            text-align: center;
-            margin-bottom: 20px;
-            color: #58a6ff;
-        }
-        input {
-            width: 100%;
-            padding: 12px;
-            margin-top: 10px;
-            border-radius: 8px;
-            border: none;
-            outline: none;
-            background: #21262d;
-            color: #fff;
-        }
-        button {
-            width: 100%;
-            margin-top: 15px;
-            padding: 12px;
-            background: #238636;
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        .btn-secondary {
-            background: #30363d;
-        }
-        .msg {
-            margin-top: 10px;
-            text-align: center;
-            color: #ff9800;
-        }
+from flask import Flask, render_template, request, jsonify, session, redirect, url_for
+import os
+from flask_cors import CORS
+from flask_wtf.csrf import CSRFProtect
+from admin_data import admin_db
+from searched_usernames import searched_username_manager
+from search_engine import searcher   # your existing search function
 
-        .coupon-box {
-            margin-top: 25px;
-            border-top: 1px solid #444;
-            padding-top: 20px;
-        }
-    </style>
-</head>
-<body>
+app = Flask(__name__)
+app.secret_key = os.environ.get("FLASK_SECRET_KEY", "super-secret-key-change-this")
 
-    <div class="container">
+CORS(app, resources={r"/*": {"origins": "*"}})
+csrf = CSRFProtect(app)
 
-        <h2>Account Login</h2>
+app.config.update(
+    SESSION_COOKIE_SECURE=False,
+    SESSION_COOKIE_HTTPONLY=True,
+    SESSION_COOKIE_SAMESITE="None",
+    PERMANENT_SESSION_LIFETIME=1800
+)
 
-        <!-- SIGNUP (NAME) -->
-        <input id="name" type="text" placeholder="Enter your name" />
-        <button onclick="signup()">Create Account</button>
 
-        <div class="msg" id="signup_msg"></div>
+@app.route("/")
+def home():
+    if not session.get("authenticated"):
+        return redirect(url_for("login_page"))
+    return redirect(url_for("dashboard"))
 
-        <hr style="margin: 25px 0; border: 0; border-top: 1px solid #333" />
 
-        <!-- LOGIN (HASH CODE) -->
-        <input id="hash" type="text" placeholder="Enter your hash code" />
-        <button class="btn-secondary" onclick="login()">Login</button>
+@app.route("/login")
+def login_page():
+    return render_template("login.html")
 
-        <div class="msg" id="login_msg"></div>
 
-        <!-- COUPON SECTION -->
-        <div class="coupon-box">
-            <h3 style="text-align:center;color:#58a6ff;margin-bottom:10px;">Have a Coupon?</h3>
+@app.route("/signup", methods=["POST"])
+@csrf.exempt
+def signup():
+    data = request.get_json()
+    name = data.get("name", "").strip()
 
-            <input id="coupon" type="text" placeholder="Enter coupon code (SBSIMPLE00)" />
-            <button style="background:#8250df;" onclick="applyCoupon()">Apply Coupon</button>
-            
-            <div class="msg" id="coupon_msg"></div>
-        </div>
+    if len(name) < 2:
+        return jsonify({"success": False, "error": "Enter valid name"})
 
-    </div>
+    user = admin_db.create_user(name)
+    return jsonify({
+        "success": True,
+        "hash_code": user["hash_code"],
+        "name": user["name"]
+    })
 
-<script>
-async function signup() {
-    let name = document.getElementById("name").value.trim();
 
-    let res = await fetch("/signup", {
-        method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({ name })
-    });
+@app.route("/login", methods=["POST"])
+@csrf.exempt
+def login():
+    data = request.get_json()
+    hash_code = data.get("hash_code", "").strip()
+    coupon = data.get("coupon", "").strip().upper()
 
-    let data = await res.json();
-    let msg = document.getElementById("signup_msg");
+    # Coupon Login
+    if coupon == "SBSIMPLE00":
+        session["authenticated"] = True
+        session["unlimited"] = True
+        session["user_name"] = "Unlimited User"
+        return jsonify({"success": True, "unlimited": True, "message": "Unlimited Access Activated"})
 
-    if (data.success) {
-        msg.style.color = "#4caf50";
-        msg.innerHTML = "Account created! Your hash: " + data.hash_code;
-    } else {
-        msg.style.color = "red";
-        msg.innerHTML = data.error;
-    }
-}
+    # Hash code login
+    user = admin_db.get_user_by_hash(hash_code)
+    if not user:
+        return jsonify({"success": False, "error": "Invalid Hash Code"})
 
-async function login() {
-    let hash_code = document.getElementById("hash").value.trim();
+    session["authenticated"] = True
+    session["user_hash"] = hash_code
+    session["user_name"] = user["name"]
+    session["unlimited"] = False
 
-    let res = await fetch("/login", {
-        method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({ hash_code })
-    });
+    return jsonify({"success": True, "message": f"Welcome {user['name']}"})
 
-    let data = await res.json();
-    let msg = document.getElementById("login_msg");
 
-    if (data.success) {
-        msg.style.color = "#4caf50";
-        msg.innerHTML = "Login successful!";
-        setTimeout(() => {
-            window.location.href = "/dashboard";
-        }, 800);
-    } else {
-        msg.style.color = "red";
-        msg.innerHTML = data.error;
-    }
-}
+@app.route("/dashboard")
+def dashboard():
+    if not session.get("authenticated"):
+        return redirect(url_for("login_page"))
 
-async function applyCoupon() {
-    let coupon = document.getElementById("coupon").value.trim();
+    return render_template(
+        "index.html",
+        name=session.get("user_name"),
+        unlimited=session.get("unlimited")
+    )
 
-    let res = await fetch("/apply-coupon", {
-        method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({ coupon })
-    });
 
-    let data = await res.json();
-    let msg = document.getElementById("coupon_msg");
+@app.route("/search", methods=["POST"])
+@csrf.exempt
+def search():
+    if not session.get("authenticated"):
+        return jsonify({"success": False, "error": "Login required"}), 401
 
-    if (data.success) {
-        msg.style.color = "#4caf50";
-        msg.innerHTML = "Coupon Applied! Unlimited Access Activated.";
-    } else {
-        msg.style.color = "red";
-        msg.innerHTML = data.error;
-    }
-}
-</script>
+    data = request.get_json()
+    username = data.get("username", "").strip()
 
-</body>
-</html>
+    if username == "":
+        return jsonify({"success": False, "error": "Enter a valid username"})
+
+    # Perform actual search
+    result = searcher.search_public_info(username)
+
+    # Save failed search history for normal users only
+    if not result["success"] and not session.get("unlimited"):
+        searched_username_manager.add_searched_username(username, session.get("user_hash"))
+
+    return jsonify(result)
+
+
+@app.route("/logout")
+def logout():
+    session.clear()
+    return redirect(url_for("login_page"))
+
+
+@app.route("/health")
+def health():
+    return jsonify({"status": "ok"})
